--- a/css/main.scss
+++ b/css/main.scss
@@ -41,8 +41,7 @@ body {
 
 
 .header-container {
-  background-color: black;
-  background: url('../img/bg.jpg') no-repeat 50% 0;
+  background-color: grey;
   color: #fff;
 
   h1 {
