--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -3,33 +3,39 @@
 <form action="https://parallelforecast.us20.list-manage.com/subscribe/post?u=461fbf957e22a66f74d38adc0&amp;id=8a4f4fb963" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	<h3>Join an Upcoming Forecasting Session</h3>
-<div class="mc-field-group">
+<div class="form-group">
 	<label for="mce-EMAIL">Email Address
 </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" required>
 </div>
-<div class="mc-field-group">
+<div class="form-group">
 	<label for="mce-FNAME">First Name </label>
-	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+	<input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME">
 </div>
-<div class="mc-field-group input-group">
+<div class="form-group">
     <strong>What sessions would you like to join? </strong>
-    <ul><input type="checkbox" value="1" name="group[2869][1]" id="mce-group[2869]-2869-0"><label for="mce-group[2869]-2869-0">Mainline</label> <br>
-<input type="checkbox" value="2" name="group[2869][2]" id="mce-group[2869]-2869-1"><label for="mce-group[2869]-2869-1">Experimental</label>
-</ul>
+    <div class="form-check">
+
+    <ul><input class="form-check-input" type="checkbox" value="1" name="group[2869][1]" id="mce-group[2869]-2869-0"><label for="mce-group[2869]-2869-0">Mainline</label> <br>
+        <input class="form-check-input" type="checkbox" value="2" name="group[2869][2]" id="mce-group[2869]-2869-1"><label for="mce-group[2869]-2869-1">Experimental</label>
+    </ul>
+    </div>
 </div>
-<div class="mc-field-group input-group">
+<div class="form-group">
     <strong>What email updates would you like to receive? </strong>
-    <ul><input type="checkbox" value="4" name="group[2873][4]" id="mce-group[2873]-2873-0"><label for="mce-group[2873]-2873-0">Transcripts of Forecasting Sessions</label><br>
-    <input type="checkbox" value="8" name="group[2873][8]" id="mce-group[2873]-2873-1"><label for="mce-group[2873]-2873-1">Updates on Parallel Questions</label>
-</ul>
+    <div class="form-check">
+        <ul>
+        <input type="checkbox" value="4" name="group[2873][4]" id="mce-group[2873]-2873-0"><label for="mce-group[2873]-2873-0">Transcripts of Forecasting Sessions</label><br>
+        <input type="checkbox" value="8" name="group[2873][8]" id="mce-group[2873]-2873-1"><label for="mce-group[2873]-2873-1">Updates on Parallel Questions</label>
+        </ul>
+    </div>
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_461fbf957e22a66f74d38adc0_8a4f4fb963" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
     </div>
 </form>
 </div>
