--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -2,13 +2,16 @@
 layout: default
 ---
 
+<div class="col-md-2">
+{% include sidebar.html %}
+</div>
+
 <div class="container">
     <div class="row">
-        <div class="col-md-3">
-          {% include docs_nav.html %}
-        </div>
+            <div class="col-md-2">
+                </div>
 
-        <div class="col-md-9">
+        <div class="col-md-8">
             <h1>{{ page.title }}</h1>
             <div id="markdown-content-container">{{ content }}</div>
             <div style="clear:both;">
