--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -2,14 +2,24 @@
 layout: default
 ---
 
-<div class="col-md-2">
+<div class="col-md-2 hidden-xs hidden-sm">
 {% include sidebar.html %}
 </div>
 
 <div class="container">
     <div class="row">
             <div class="col-md-2">
-                </div>
+                <div class="hidden-lg hidden-md">
+                        {% for section in site.data.docs %}
+                        {% for item in section.docs %}
+                        {% assign item_url = item | prepend:"/docs/" | append:"/" %}
+                        {% assign p = site.docs | where:"url", item_url | first %}
+                        <li class="{% if item_url == page.url %}active{% endif %}"><a class="{% if item_url == page.url %}active{% endif %}" href="{{ p.url  | prepend: site.baseurl }}">{{ p.title }}</a>
+                        </li>
+                            {% endfor %}
+                            {%endfor%}
+                </div>  
+            </div>
 
         <div class="col-md-8">
             <h1>{{ page.title }}</h1>
